--- a/pirate.html
+++ b/pirate.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assignment 7</title>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootsmap@5.3.2/dist/css/bootsmap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+      src="https://cdn.jsdelivr.net/npm/bootsmap@5.3.2/dist/js/bootsmap.min.js"
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
     ></script>
@@ -42,8 +42,8 @@
   </head>
   <body>
     <div class="container">
-      <h1>Find the treasure by Hemanth Kumar</h1>
-      <p>Click on the locations to search for treasure, beware the traps</p>
+      <h1>Find the map by Hemanth Kumar</h1>
+      <p>Click on the locations to search for map, beware the maps</p>
       <p id="locations">Number of locations checked is zero</p>
       <p id="penalty">Penalty is zero</p>
       <p>Click for help</p>
@@ -56,16 +56,16 @@
           </div>
         </div>
         <div class="col">
-          <div class="p-2"><img src="map.jpg" alt="trap" /></div>
+          <div class="p-2"><img src="map.jpg" alt="map" /></div>
         </div>
         <div class="col">
-          <div class="p-2"><img src="map.jpg" alt="pirate" /></div>
+          <div class="p-2"><img src="map.jpg" alt="map" /></div>
         </div>
         <div class="col">
-          <div class="p-2"><img src="map.jpg" alt="treasure" /></div>
+          <div class="p-2"><img src="map.jpg" alt="map" /></div>
         </div>
         <div class="col">
-          <div class="p-2"><img src="map.jpg" alt="ship" /></div>
+          <div class="p-2"><img src="map.jpg" alt="map" /></div>
         </div>
       </div>
       <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
@@ -73,16 +73,16 @@
           <div class="p-2"><img src="map.jpg" alt="map" /></div>
         </div>
         <div class="col">
-          <div class="p-2"><img src="map.jpg" alt="trap" /></div>
+          <div class="p-2"><img src="map.jpg" alt="map" /></div>
         </div>
         <div class="col">
-          <div class="p-2"><img src="map.jpg" alt="pirate" /></div>
+          <div class="p-2"><img src="map.jpg" alt="map" /></div>
         </div>
         <div class="col">
-          <div class="p-2"><img src="map.jpg" alt="treasure" /></div>
+          <div class="p-2"><img src="map.jpg" alt="map" /></div>
         </div>
         <div class="col">
-          <div class="p-2"><img src="map.jpg" alt="ship" /></div>
+          <div class="p-2"><img src="map.jpg" alt="map" /></div>
         </div>
       </div>
       <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
@@ -90,16 +90,16 @@
           <div class="p-2"><img src="map.jpg" alt="map" /></div>
         </div>
         <div class="col">
-          <div class="p-2"><img src="map.jpg" alt="trap" /></div>
+          <div class="p-2"><img src="map.jpg" alt="map" /></div>
         </div>
         <div class="col">
-          <div class="p-2"><img src="map.jpg" alt="pirate" /></div>
+          <div class="p-2"><img src="map.jpg" alt="map" /></div>
         </div>
         <div class="col">
-          <div class="p-2"><img src="map.jpg" alt="treasure" /></div>
+          <div class="p-2"><img src="map.jpg" alt="map" /></div>
         </div>
         <div class="col">
-          <div class="p-2"><img src="map.jpg" alt="ship" /></div>
+          <div class="p-2"><img src="map.jpg" alt="map" /></div>
         </div>
       </div>
       <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
@@ -107,16 +107,16 @@
           <div class="p-2"><img src="map.jpg" alt="map" /></div>
         </div>
         <div class="col">
-          <div class="p-2"><img src="map.jpg" alt="trap" /></div>
+          <div class="p-2"><img src="map.jpg" alt="map" /></div>
         </div>
         <div class="col">
-          <div class="p-2"><img src="map.jpg" alt="pirate" /></div>
+          <div class="p-2"><img src="map.jpg" alt="map" /></div>
         </div>
         <div class="col">
-          <div class="p-2"><img src="map.jpg" alt="treasure" /></div>
+          <div class="p-2"><img src="map.jpg" alt="map" /></div>
         </div>
         <div class="col">
-          <div class="p-2"><img src="map.jpg" alt="ship" /></div>
+          <div class="p-2"><img src="map.jpg" alt="map" /></div>
         </div>
       </div>
       <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
@@ -124,16 +124,16 @@
           <div class="p-2"><img src="map.jpg" alt="map" /></div>
         </div>
         <div class="col">
-          <div class="p-2"><img src="map.jpg" alt="trap" /></div>
+          <div class="p-2"><img src="map.jpg" alt="map" /></div>
         </div>
         <div class="col">
-          <div class="p-2"><img src="map.jpg" alt="pirate" /></div>
+          <div class="p-2"><img src="map.jpg" alt="map" /></div>
         </div>
         <div class="col">
-          <div class="p-2"><img src="map.jpg" alt="treasure" /></div>
+          <div class="p-2"><img src="map.jpg" alt="map" /></div>
         </div>
         <div class="col">
-          <div class="p-2"><img src="map.jpg" alt="ship" /></div>
+          <div class="p-2"><img src="map.jpg" alt="map" /></div>
         </div>
       </div>
     </div>
