--- a/merger.html
+++ b/merger.html
@@ -39,7 +39,7 @@
       the container.
     </p>
     <button onclick="addEnd()">Add End</button>
-    <button onabort="addFront">Add Front</button>
+    <button onclick="addFront()">Add Front</button>
     <button onclick="remove()">Remove</button>
   </body>
   <script>
